--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bitnoise/react-scheduler",
+  "name": "@bitnoi.se/react-scheduler",
   "private": true,
   "version": "0.0.0",
   "type": "module",
