--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx}": [
-      "yarn run lint:fix",
+      "yarn run lint",
       "yarn run format"
     ]
   },
