--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
