refactor: Change structure of folders adjust imports
Change structure of folders, add absolute imports, separate typing and styling from logic, add index file in components.

--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,7 @@
   },
   "settings": {
     "import/resolver": {
+      "typescript": {},
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
