--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": ["react", "@typescript-eslint", "filenames"],
   "rules": {
     "react/react-in-jsx-scope": "off",
     "eqeqeq": ["error", "always"],
@@ -46,6 +46,13 @@
       {
         "avoidEscape": true,
         "allowTemplateLiterals": true
+      }
+    ],
+    "filenames/match-exported": 1,
+    "import/no-internal-modules": [
+      "error",
+      {
+        "forbid": ["@/components/**"]
       }
     ]
   },
