--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
