chore: Add some configuration and npm dev package

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "eqeqeq": ["error", "always"],
+    "@typescript-eslint/no-empty-function": "warn",
     "import/order": [
       "error",
       {
