--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rollup-plugin-visualizer": "5.9.0",
     "typescript": "4.9.3",
     "vite": "4.1.0",
-    "vite-plugin-dts": "2.2.0"
+    "vite-plugin-dts": "2.2.0",
+    "vite-plugin-svgr": "2.4.0"
   }
 }
