feat(ui): remove carret

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "styled-normalize": "8.0.7"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "@faker-js/faker": "7.6.0",
     "@types/datejs": "0.0.32",
     "@types/node": "18.15.11",
     "@types/react": "18.0.27",
