--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
     "@types/datejs": "0.0.32",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -63,6 +64,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.0",
     "lint-staged": "13.2.0",
+    "lodash.debounce": "4.0.8",
     "prettier": "2.8.7",
     "rollup-plugin-visualizer": "5.9.0",
     "typescript": "4.9.3",
