chore: Update package.json file
Add keywords, author, repository information to package.json file, update version of package.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "@bitnoi.se/react-scheduler",
-  "version": "0.0.0",
+  "version": "0.1",
   "type": "module",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bitnoise/react-scheduler"
+  },
+  "keywords": [
+    "scheduler",
+    "gantt",
+    "gantt chart",
+    "react",
+    "timeline",
+    "calendar"
+  ],
+  "author": {
+    "name": "Bitnoise",
+    "url": "https://www.bitnoise.pl/"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
